--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,8 @@ configurations {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-rest")
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
-	compile('org.springframework.boot:spring-boot-starter-security')
-    compile 'io.jsonwebtoken:jjwt:0.9.0'
+	//compile('org.springframework.boot:spring-boot-starter-security')
+    //compile 'io.jsonwebtoken:jjwt:0.9.0'
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
